--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,69 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    background-color: #292B47;
+    font-family: "Inter", sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+header {
+    display: flex;
+    align-items: center;
+    margin: 1%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.salamander_image {
+    border-radius: 50%; 
+    width: 155px;
+    z-index: 1;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.name {
+    white-space: nowrap;
+    font-family: El Messiri;
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: #DF99C5;
+    background-color: rgba(124, 103, 189, 0.1);
+    padding: 24px;
+    padding-right: 45px;
+    border-radius: 200px;
+    width: 320px;
+    text-align: right;
+    margin-left: -50px;
+    z-index: 0;
 }
+
+.pageName {
+    font-family: El Messiri;
+    font-weight: 400;
+    font-size: 1.6rem;
+    color: #DF99C5;
+    background-color: rgba(124, 103, 189, 0.1);
+    padding: 24px;
+    padding-right: 45px;
+    padding-left: 45px;
+    margin-left: 5%;
+    border-radius: 200px;
+    width: 70%;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    color: #7d7f94;
+    text-align: right;
+    margin-right: 2%;
+    font-size: smaller;
+}
+
+.smallButtons {
+  background-color: #DF99C5;
+  width: 340px;
+  height: 50px;
+  border-radius: 10px;
+  border: 2px solid #DF99C5; /* add this */
+}
+
+.smallButtons:hover {
+  border-color: #5c3e51;
+}
+
