--- a/src/css/previewProcessing.css
+++ b/src/css/previewProcessing.css
@@ -1,7 +1,13 @@
+.main-content {
+    display: flex;
+    padding: 0% 1%;
+    gap: 2%;
+}
 /*-------------List of videos-------------*/
 .video-list-container {
     display: flex;
     justify-content: center;
+
 }
 
 .video-list h3 {
@@ -14,16 +20,24 @@
     max-width: fit-content;
     width: auto;
     padding: 10px;
+    padding-bottom: 6%;
+    display: flex;
+    flex-direction: column;
+    }
+
+.scroll-list {
+    max-height: 262.5px;
+    overflow-y: auto;
 }
 
 .upload-video {
     /* display: flex;
     justify-content: center; */
     padding-left: 10px;
+    margin-top: auto;
 }
 
 .upload-video button{
-    margin-top: 10%;
     background-color: #7C67BD;
     width: 250px;
     height: 42px;
@@ -110,10 +124,4 @@ input[type="color"] {
     flex-direction: column;
     width: 250px;
     gap: 0.5rem;
-}
-
-.main-content {
-    display: flex;
-    padding: 0% 1%;
-    gap: 2%;
 }
