--- a/src/css/previewProcessing.css
+++ b/src/css/previewProcessing.css
@@ -26,7 +26,7 @@
     }
 
 .scroll-list {
-    max-height: 262.5px;
+    max-height: 270px;
     overflow-y: auto;
 }
 
@@ -43,6 +43,7 @@
     height: 42px;
     border-radius: 10px;
     border: 2px solid #7C67BD;
+    color: white;
 }
 
 .video-row {
@@ -67,8 +68,17 @@
     padding: 10px;
     width: 70px;
     border-style: none;
-    border: 2px solid #7C67BD;
+    border: 3px solid #7C67BD;
 }
+
+.video-link {
+    cursor: pointer;
+    text-decoration: underline;
+}
+.video-link:hover {
+    color: #7C67BD;
+}
+
 
 /*-------------Preview Content-------------*/
 .preview-content {
