--- a/src/css/mainPage.css
+++ b/src/css/mainPage.css
@@ -11,23 +11,25 @@
     position: relative; 
     overflow: hidden;
     background-color: #1a0f3d; 
+}
 
-
+body {
+    margin: 0;
 }
 
 .salamander-image-corner {
     position: absolute;
-    right: -150px; /* Adjust to move it more/less off-screen */
-    top: 29.5%;
-    transform: translateY(-50%); /* Vertically center the element */
-    width: 900px; /* Set a large width/height for the circle */
-    height: 900px;
-    border-radius: 50%; /* Makes it a perfect circle */
-    background-image: url('../assets/salamander_image.png'); /* Add image here */
-    background-size: cover; /* Ensures the image covers the entire circle */
+    right: -150px;
+    top: 40%;
+    transform: translateY(-50%);
+    width: 750px;
+    height: 750px;
+    border-radius: 50%;
+    background-image: url('../assets/salamander_image.png');
+    background-size: cover;
     background-position: center; /* Centers the image within the circle */
-    opacity: 0.4; /* Apply desired opacity */
-    z-index: 1; /* Keep it behind the main content */
+    opacity: 0.7;
+    z-index: 1;
     pointer-events: none; /* Prevents it from interfering with clicks */
 }
 
@@ -68,7 +70,7 @@
     -webkit-backdrop-filter: blur(5px);
     padding: 30px 40px;
     border-radius: 12px;
-    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+    
     color: #E6E0F8;
     text-align: left;
     height: fit-content; 
