--- a/src/css/previewProcessing.css
+++ b/src/css/previewProcessing.css
@@ -15,7 +15,7 @@
 }
 
 .video-list {
-    background-color: #313153;
+    background-color: rgba(124, 103, 189, 0.1);
     border-radius: 10px;
     max-width: fit-content;
     width: auto;
@@ -93,7 +93,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-    background-color: #313153;
+    background-color: rgba(124, 103, 189, 0.1);
     border-radius: 10px;
     padding: 1% 3% 3% 3%;
 }
@@ -114,7 +114,7 @@
 
 /*---------------Controls---------------*/
 .controls {
-    background-color: #313153;
+    background-color: rgba(124, 103, 189, 0.1);
     border-radius: 10px;
     padding: 2.5% 3% 2.5% 3%;
     margin-top: 2%;
